added finished sql/php scripts + changed js to php transition

--- a/Candidat 4/site/assets/css/main.css
+++ b/Candidat 4/site/assets/css/main.css
@@ -2,36 +2,11 @@
     src: url(../font/built.TTF);
     font-family: built
 }
-@keyframes logo {
-    from {
-        width: 500px;
-        opacity: 0;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-    }
-    50% {
-        opacity: 1;
-    }
-    to {
-        width: 100px;
-        opacity: 0;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-    }
-}
 @keyframes logo_header {
     from {
         width: 100px;
         opacity: 0;
 
-    }
-    50% {
-        width: 100px;
-        opacity: 0;
     }
     to {
         width: 150px;
@@ -60,25 +35,8 @@ a:hover {
 body {
     background-color: #000;
     font-family: built;
-    animation-duration: 5s;
+    animation-duration: 1s;
     animation-name: background;
-    animation-iteration-count: 1;
-    animation-direction: alternate;
-}
-img.open {
-    display: flex;
-	justify-content: center;
-	margin: auto;
-	position: absolute;
-	left: 0;
-	right: 0;
-    top: 0;
-    bottom: 0;
-    width: 100px;
-    opacity: 0;
-
-    animation-duration: 5s;
-    animation-name: logo;
     animation-iteration-count: 1;
     animation-direction: alternate;
 }
@@ -94,7 +52,7 @@ img.open {
 	left: 0;
     right: 0;
     
-    animation-duration: 8s;
+    animation-duration: 1s;
     animation-name: logo_header;
     animation-iteration-count: 1;
     animation-direction: alternate;
@@ -116,22 +74,18 @@ img.open {
 }
 span[first] {
     left: 5%;
-    animation-delay: 4s;
     transition: .5s
 }
 span[second] {
     right: 5%;
-    animation-delay: 4.2s;
     transition: .5s
 }
 span[third] {
     left: 25%;
-    animation-delay: 4.2s;
     transition: .5s
 }
 span[fourth] {
     right: 25%;
-    animation-delay: 4.2s;
     transition: .5s
 }
 span:hover p {
@@ -175,4 +129,23 @@ h1 {
     position: relative;
     top: -25px;
     color: white
+}
+h3 {
+    font-size:24px;
+    top: 25px;
+    position: absolute;
+    color: white
+}
+.centerho {
+    display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+    margin: auto;
+    position: absolute;
+
+	left: 0;
+	right: 0;
+
+    z-index: -2;
 }
