profile page + app register php

--- a/Candidat 4/site/assets/css/main.css
+++ b/Candidat 4/site/assets/css/main.css
@@ -149,3 +149,16 @@ h3 {
 
     z-index: -2;
 }
+th {
+    font-size: 42px;
+    color: white
+}
+td {
+    font-size: 28px;
+    color: white
+}
+table {
+    max-width: 50%;
+    position: absolute;
+    top: 150px
+}
